tricks/devops/kubernetes/resources/whoami.deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  labels:
    app: containous
    name: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      app: containous
      task: whoami
  template:
    metadata:
      labels:
        app: containous
        task: whoami
    spec:
      containers:
        - name: containouswhoami
          image: containous/whoami
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 25Mi
            limits:
              cpu: 100m
              memory: 50Mi
