tricks/devops/kubernetes/resources/nginx.lb.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      name: http
  type: LoadBalancer
