tricks/devops/kubernetes/resources/whoami.lb.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-lb
spec:
  selector:
    app: containous
    task: whoami
  ports:
    - port: 80
      name: http
  type: LoadBalancer
