tricks/devops/kubernetes/resources/whoami.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: containous
    task: whoami
