tricks/devops/kubernetes/resources/whoami.ing.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: whoami-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: whoami.example.com
      http:
        paths:
          - path: /bar
            backend:
              serviceName: whoami
              servicePort: 80
          - path: /foo
            backend:
              serviceName: whoami
              servicePort: 80
          - path: /
            backend:
              serviceName: whoami
              servicePort: 80
